[package]
name = "async-pop"
description = "A simple Pop3 compatible client"
version = "0.1.7"
license = "MIT"
documentation = "https://docs.dust.email/packages/async-pop3"
repository = "https://github.com/Dust-Mail/async-pop"
edition = "2021"

rust-version = "1.65.0"

[dependencies]
async-native-tls = {version = "0.4.0", default-features = false }
async-std = {version = "1.12.0", features = ["attributes"], optional = true }
byte-pool = "0.2.4"
bytes = "1.4.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
nom = "7.1.3"
tokio = { version = "1.26.0", features = ["net", "time", "rt", "macros"], optional = true}

[dev-dependencies]
env_logger = "0.10.0"
dotenv = "0.15"

[features]
default = ["runtime-tokio"]

runtime-async-std = ["async-std", "async-native-tls/runtime-async-std"]
runtime-tokio = ["tokio", "async-native-tls/runtime-tokio"]
