[package]
name = "async-pop"
description = "A simple Pop3 compatible client"
version = "1.1.0"
license = "MIT"
repository = "https://github.com/Dust-Mail/async-pop"
edition = "2021"

rust-version = "1.65.0"

[dependencies]
async-native-tls = { version = "0.5.0", default-features = false }
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
async-trait = { version = "0.1.74", optional = true }
base64 = { version = "0.21.5", optional = true }
bytes = "1.5.0"
futures = "0.3.28"
log = "0.4.20"
nom = "7.1.3"
tokio = { version = "1.28.2", features = [
	"net",
	"time",
	"rt",
	"macros",
], optional = true }

[dev-dependencies]
env_logger = "0.10.0"
dotenv = "0.15"

[features]
default = ["runtime-async-std", "sasl"]
sasl = ["dep:base64", "dep:async-trait"]

runtime-async-std = ["async-std", "async-native-tls/runtime-async-std"]
runtime-tokio = ["tokio", "async-native-tls/runtime-tokio"]
