[package]
name = "async-pop"
description = "A simple Pop3 compatible client"
version = "1.1.1"
license = "MIT"
repository = "https://github.com/Dust-Mail/async-pop"
edition = "2021"

rust-version = "1.65.0"

[dependencies]
async-native-tls = { version = "0.5.0", optional = true, default-features = false }
async-rustls = { version = "0.4.1", optional = true }
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
async-trait = { version = "0.1.77", optional = true }
base64 = { version = "0.21.5", optional = true }
bytes = "1.5.0"
futures = "0.3.30"
log = "0.4.29"
nom = "7.1.3"
tokio = { version = "1.35.1", features = [
	"net",
	"time",
	"rt",
	"macros",
], optional = true }

[dev-dependencies]
env_logger = "0.10.0"
dotenv = "0.15"

[features]
default = ["runtime-async-std", "sasl", "async-native-tls"]

tls = []
async-rustls = ["tls", "dep:async-rustls"]
async-native-tls = ["tls", "dep:async-native-tls"]

sasl = ["dep:base64", "dep:async-trait"]

runtime-async-std = ["async-std", "async-native-tls?/runtime-async-std"]
runtime-tokio = ["tokio", "async-native-tls?/tokio"]
